# tum-hackathon

./: .gitignore  README.md  pyproject.toml
data/: generated_qa_data_tum.json
scripts/: README.md  compare_results.py  test_on_sample.py
src/ai_eval/config/: config.py  global_config.py  input_output.yaml  model_config.yaml  rag_config.yaml
src/ai_eval/resources/: data_schemas.py  debug.py  deepeval_scorer.py  eval_dataset_builder.py  evaluation_helper.py  get_models.py  llm_aaj.py  predictor.py  preprocessor.py  prompts.py  rag_experiment.py  rag_models.py  rag_prototype.py  rag_template.py  synthesizer.py
src/ai_eval/services/: blueprint_file.py  clients.py  database.py  file.py  file_gcp.py  langfuse.py  llm_engineering.py  logger.py  opik.py
src/ai_eval/utils/: utils.py
src/notebooks/: dual_evaluator_rag_pipeline.ipynb  finetune_sentence_trans.ipynb  langfuse_opik.ipynb  main.py  prepare_tum_hackathon.ipynb  prepare_tum_hackathon_2.ipynb  rag.ipynb  ragas.ipynb  setup.ipynb  tum_hackathon.ipynb
tests/: __init__.py  test_generated_qa_data_integrity.py  test_qa_dataset_evaluation.py  test_qa_simple_validation.py  test_rag_pipeline.py
